<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout3"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="100dp"
            android:gravity="center">

            <RadioGroup
                android:id="@+id/animalChoiceRadioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/dogButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dog"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="140dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp" />

                <RadioButton
                    android:id="@+id/catButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cat"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="88dp"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="48dp" />
            </RadioGroup>

            <TextView
                android:id="@+id/resultTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/results_text"
                android:textAlignment="center"
                android:textSize="24sp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/dynamicFragmentContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>